--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body.dark .bar form input {
 .bar form input {
   margin-left: .5rem;
   padding-left: .5rem;
-  width: 250px;
+  width: 150px;
   height: 30px;
   border-radius: 25px;
   border-style: solid;
@@ -70,6 +70,9 @@ body.dark .bar form input {
 
 @media (max-width: 520px) {
   .datos h2 {
+    font-size: 22px;
+  }
+  .datos h3 {
     font-size: 18px;
   }
   .datos p {
