--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 * {
   margin: 0;
 }
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
 body.dark {
   background: #161616;
@@ -19,6 +23,17 @@ body.dark #temas {
   color: #161616;
   border-radius: 25px;
   border-style: solid;
+  cursor: pointer;
+}
+
+#temas:active {
+  transform: scale(0.96);
+}
+
+.titulo {
+  font-size: 28px;
+  margin-top: 1rem;
+  margin-left: 1.5rem;
 }
 
 .bar {
@@ -69,6 +84,10 @@ body.dark .bar form input {
 }
 
 @media (max-width: 520px) {
+  .titulo {
+    font-size: 25px;
+  }
+
   .datos h2 {
     font-size: 22px;
   }
